--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ body {
   padding-bottom: var(--padding-list);
   padding-left: calc(var(--padding-list)*2);
   color : var(--color-white);
+  
 }
 
 .personinfo {
@@ -191,6 +192,7 @@ body {
 .infobox > input {
  border:none;
  background-color: var(--color-light-grey);
+ display: block;
  
 }
 
@@ -202,9 +204,92 @@ body {
 }
 
 
-.infobox > .submitbutton{
+.submitbutton{
   padding: 10px 10px 10px 10px;
   border-radius: 10px;
   background-color: var(--color-yellow);
   font-weight: bold;
+  display: block;
+  border-style: none;
+}
+
+.bg-modal {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.7);
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+
+.modal-content {
+  width: 300px;
+  height: 500px;
+  background-color: var(--color-white);
+  border-radius: 10px;
+  position: relative;
+}
+
+.addpopup-close {
+  position: absolute;
+  top: 0;
+  right :14px;
+  font-size: 42px;
+  transform: rotate(45deg);
+  cursor: pointer;
+  color: var(--color-light-grey);
+}
+
+.delete-modal {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.7);
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.deletealert {
+  position: relative;
+  width: 300px;
+  height:200px;
+  border-radius: 10px;
+  background-color: var(--color-white);
+  text-align: center;
+  margin: auto;
+}
+
+.deletepopup-close {
+  position: absolute;
+  top: 0;
+  right :7px;
+  font-size: 30px;
+  transform: rotate(45deg);
+  cursor: pointer;
+  color: var(--color-light-grey);
+}
+
+.yes {
+  background-color: var(--color-blue);
+  border: none;
+  padding: 5px 5px 5px 5px;
+  color: var(--color-white);
+}
+
+.discard {
+  background-color: var(--color-pink);
+  border: none;
+  padding: 5px 5px 5px 5px;
+  color: var(--color-white);
 }
