--- a/style.css
+++ b/style.css
@@ -54,9 +54,10 @@ body {
 
 .searcharea {
   display: flex;
+  width: 50%;
   justify-content: center;
   align-items: center;
-  background-color: var(--color-white);
+  background-color: #ffffff;
 }
 
 .searchbox {
