--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
   width: 50%;
   justify-content: center;
   align-items: center;
-  background-color: #ffffff;
+  background-color: var(--color-yellow);
 }
 
 .searchbox {
