--- a/style.css
+++ b/style.css
@@ -251,6 +251,7 @@ body {
   border-radius: 10px;
   background-color: var(--color-white);
   text-align: center;
+  padding-top: 10px;
   margin: auto;
 }
 
@@ -276,4 +277,32 @@ body {
   border: none;
   padding: 5px 5px 5px 5px;
   color: var(--color-white);
+}
+
+.mandatory-alert {
+  position: relative;
+  width: 300px;
+  height: 200px;
+  border-radius: 10px;
+  background-color: var(--color-white);
+  border-color: black;
+  text-align: center;
+  padding-top: 40px;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.mandatoryalert-close {
+  position: absolute;
+  top: 0;
+  right: 14px;
+  font-size: 42px;
+  transform: rotate(45deg);
+  cursor: pointer;
+  color: var(--color-light-grey);
+}
+.return {
+  width: 50%;
+  background-color: var(--color-pink);
 }
